src/objects/LicenseSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>To block or enable functionality in the client package . Indicates whether a function is enable or if there is a limit to use it.</description>
    <fields>
        <fullName>Can_Distribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can_Distribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanClonePpi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanClonePpi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPI_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPI_Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DownloadPPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsePPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UsePPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateTemplates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateTemplates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeleteTemplates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DeleteTemplates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadTemplates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DownloadTemplates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EditTemplates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EditTemplates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseTemplates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseTemplates</label>
        <type>Checkbox</type>
    </fields>
    <label>LicenseSettings</label>
</CustomObject>